--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
               <div id="clear">C</div>
             </div>
           </div>
+          <div class="mbtn">Mbtn</div>
           <div class="equal" id="result">=</div>
         </div>
       </div>
+      <p class="disclaimer">
+        *Press mbtn to enter Merkat mode<br />Once you enter there's no return
+      </p>
     </main>
     <script src="index.js"></script>
   </body>
