--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
               <div>.</div>
               <div id="clear">C</div>
             </div>
+            <div class="mbtn">
+              <div>Mbtn</div>
+            </div>
           </div>
           <div class="equal" id="result">=</div>
         </div>
