added m function, styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <main>
-      <div class="title">Merkulator</div>
+      <!-- <a href="#"><span class="icon"></span></a> -->
+      <div class="title"><span class="icon"></span>Merculator</div>
       <div class="calculator">
         <div class="input" id="input"></div>
         <div class="buttons">
@@ -43,7 +44,7 @@
               <div>.</div>
               <div id="clear">C</div>
             </div>
-            <div class="mbtn">
+            <div onClick="toggleMbtn()" id="mBtn">
               <div>Mbtn</div>
             </div>
           </div>
