--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <div class="equal" id="result">=</div>
         </div>
       </div>
+      <p class="credits">Made with ❤️ by Belka</p>
     </main>
     <script src="index.js"></script>
   </body>
